fix bugs, task list sizing, spacing etc

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
 }
 
 #progress {
-    width: 80%;
+    width: 0%;
     height: 10px;
     background-color: var(--teal);
     border-radius: 10px;
@@ -60,7 +60,7 @@ body {
 }
 
 #numbers {
-    width: 200px;
+    width: 100px;
     height: 100px;
     background-color: var(--purple);
     display: flex;
@@ -104,7 +104,7 @@ button {
     outline: none;
 }
 
-#task-list {
+.task-list {
     display: flex;
     flex-direction: column;
     gap: 10px;
